# med-researcher-agent

./: .editorconfig  .gitignore  .pymarkdown.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/: med-researcher.instructions.md
.agents/agents/: dietologist.md  fitness-coach.md  med-researcher.md  psychotherapist.md
.agents/agents/resources/: gender-affirming-care.md  med-db-commands.md  neurodevelopmental-specialization.md  output-formats.md
.agents/agents/rules/: clinical-work-guides.md  coding-style.md  knowledge-base.md  med-db-commands.md  sex-relationship-therapy.md  theoretical-framework.md
.agents/research-briefs/: gender-affirming-care.md  neurodevelopmental-comorbidities.md  sex-relationship-therapy.md
.agents/scripts/: DEVELOPER.md  entrypoints.py  med-db-download-icd11.py  med-db-integrity-check.py  med-db-lookup-dsm5.py  med-db-lookup-icd11.py  med-db-lookup.py  med-db-query.py  med-db-setup-dsm5.py  med-db-setup-therapy-methods.py  med-db-validate.py  med-db.py  pubmed-med-db.py  utils.py
.agents/skills/analyze-med-claims/: SKILL.md
.agents/skills/create-diet-plan/: SKILL.md
.agents/skills/create-med-agent/: SKILL.md
.agents/skills/create-med-skill/: SKILL.md
.agents/skills/create-workout-routine/: SKILL.md
.agents/skills/optimize/: SKILL.md
.agents/skills/optimize-repo/: SKILL.md
.agents/skills/start-therapy-session/: SKILL.md  compression-rules.md  handoff-prompt.md  informed-consent.md
.claude/: permissions.json  settings.json
.claude/agents/: dietologist.md  fitness-coach.md  med-researcher.md  psychotherapist.md
.github/: copilot-instructions.md
.github/agents/: dietologist.agent.md  fitness-coach.agent.md  med-researcher.agent.md  psychotherapist.agent.md
tests/: conftest.py  test_med_db.py  test_med_db_lookup.py  test_med_db_lookup_dsm5.py  test_med_db_lookup_icd11.py  test_med_db_query.py  test_med_db_validate.py  test_utils.py
(+18 files in other folders)
