[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "med-researcher-agent"
version = "0.1.0"
description = "Reusable medical research agent configuration for both GitHub Copilot and Claude Code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
med-db = "entrypoints:med_db"
med-db-lookup = "entrypoints:med_db_lookup"
med-db-query = "entrypoints:med_db_query"
med-db-lookup-icd11 = "entrypoints:med_db_lookup_icd11"
med-db-lookup-dsm5 = "entrypoints:med_db_lookup_dsm5"
med-db-download-icd11 = "entrypoints:med_db_download_icd11"
med-db-setup-dsm5 = "entrypoints:med_db_setup_dsm5"
med-db-setup-therapy-methods = "entrypoints:med_db_setup_therapy_methods"
med-db-integrity-check = "entrypoints:med_db_integrity_check"
lint-md = "entrypoints:lint_md"
test = "entrypoints:test"

[tool.setuptools]
py-modules = ["entrypoints"]

[tool.setuptools.package-dir]
"" = ".agents/scripts"

[dependency-groups]
dev = [
    "pymarkdownlnt>=0.9.38",
    "pytest>=9.0.3",
]
